[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Stations/station_bellows_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Stations/station_cauldron.png" type="Texture" id=2]
[ext_resource path="res://Assets/Stations/station_fire.png" type="Texture" id=3]
[ext_resource path="res://CauldronSet.gd" type="Script" id=4]
[ext_resource path="res://Assets/Stations/station_cauldron_shine.png" type="Texture" id=5]
[ext_resource path="res://Assets/Stations/station_embers.png" type="Texture" id=6]
[ext_resource path="res://Assets/Stations/station_wood.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 80, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 80, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 80, 16 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CauldronSet" type="Node2D"]
script = ExtResource( 4 )

[node name="Bellows" type="Node2D" parent="."]

[node name="BellowsSprite" type="AnimatedSprite" parent="Bellows"]
position = Vector2( 1, 0 )
frames = SubResource( 5 )
speed_scale = 0.5
centered = false

[node name="Cauldron" type="Node2D" parent="."]
position = Vector2( 200, 200 )

[node name="CauldronHotSprite" type="Sprite" parent="Cauldron"]
texture = ExtResource( 5 )
centered = false

[node name="CauldronColdSprite" type="Sprite" parent="Cauldron"]
texture = ExtResource( 2 )
centered = false

[node name="Fire" type="Node2D" parent="."]
position = Vector2( 200, 200 )

[node name="FireSprite" type="AnimatedSprite" parent="Fire"]
position = Vector2( 0, 32 )
frames = SubResource( 11 )
frame = 2
centered = false

[node name="Coals" type="Node2D" parent="."]
position = Vector2( 300, 200 )

[node name="CoalsSprite" type="AnimatedSprite" parent="Coals"]
frames = SubResource( 17 )
centered = false

[node name="Wood" type="Node2D" parent="."]
position = Vector2( 200, 200 )

[node name="WoodSprite" type="AnimatedSprite" parent="Wood"]
position = Vector2( 32, 64 )
frames = SubResource( 22 )

[connection signal="animation_finished" from="Bellows/BellowsSprite" to="." method="_on_BellowsSprite_animation_finished"]
